# Haskell

./: README.md
Eth_Kralsahr_Blagarth/: Gamedata.hs  lensString.hs  player.hs
Eth_Kralsahr_Blagarth/old_tests/: playWorld.hs
haq/: Haq.hs  haq.cabal
scratch/: Listzip.hs  create_file.hs  create_test.txt  haiku.txt  helloworld.hs  interaction_state_test.hs  interaction_test.hs  lensAssign.hs  lens_test.hs  linefile.txt  linefile2.txt  palindrome.hs  read_file1.hs  read_file2.hs  readsomething.hs  something.txt  todo.hs  todo.txt
subprocedure-experiments/: choice.hs  secret-session
